src/task/tools/msbuild/snapshots/mob_rs__task__tools__msbuild__tests__msbuild_builder_chain.snap
---
source: src/task/tools/msbuild/tests.rs
expression: tool
---
MsBuildTool {
    solution: Some(
        "solution.sln",
    ),
    targets: [
        "Build",
    ],
    properties: {},
    configuration: Some(
        Release,
    ),
    platform: Some(
        "x64",
    ),
    architecture: None,
    max_cpu_count: true,
    operation: Build,
}
