src/task/tools/msbuild/snapshots/mob_rs__task__tools__msbuild__tests__msbuild_multiple_targets.snap
---
source: src/task/tools/msbuild/tests.rs
expression: tool
---
MsBuildTool {
    solution: None,
    targets: [
        "Build",
        "Test",
    ],
    properties: {},
    configuration: None,
    platform: None,
    architecture: None,
    max_cpu_count: false,
    operation: Build,
}
