src/task/tools/msbuild/snapshots/mob_rs__task__tools__msbuild__tests__msbuild_properties_deterministic.snap
---
source: src/task/tools/msbuild/tests.rs
expression: tool
---
MsBuildTool {
    solution: None,
    targets: [],
    properties: {
        "PropA": "ValueA",
        "PropB": "ValueB",
        "PropC": "ValueC",
    },
    configuration: None,
    platform: None,
    architecture: None,
    max_cpu_count: false,
    operation: Build,
}
