src/task/tools/msbuild/snapshots/mob_rs__task__tools__msbuild__tests__msbuild_toolset_conversion.snap
---
source: src/task/tools/msbuild/tests.rs
expression: conversions
---
[
    (
        "14.3",
        "v143",
    ),
    (
        "14.2",
        "v142",
    ),
    (
        "14.1",
        "v141",
    ),
    (
        "14.0",
        "v140",
    ),
    (
        "13.0",
        "v130",
    ),
]
